--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
+    <!-- header/nav section start -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -24,10 +25,16 @@
             </ul>
         </nav>
     </header>
+    <!-- header/nav section end -->
+    <!-- hero section start -->
     <div class="hero"></div>
+    <!-- hero section end -->
     <section class="content">
+        <!-- search engine optimization section start -->
         <article class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg"
+                alt="image showing a computer, magnifing glass, cup of coffee pens and a note book that has drawings surrounding a cloud with SEO in the middle, on a nice wood table."
+                class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -35,8 +42,12 @@
                 your visibility and find the right customers for your business.
             </p>
         </article>
+        <!-- search engine optimization section end -->
+        <!-- online reputation management section start -->
         <article id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg"
+                alt="person on a laptop looking at a reputation bar graph gradually going up in a positive way."
+                class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -44,8 +55,12 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </article>
+        <!-- online reputation management section end -->
+        <!-- social media marketing section start -->
         <article id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg"
+                alt="people sitting on both sides of a large table with computers and tablets with icons laying on a wooden table showing tweet, media, like, share and other technology reltated icons."
+                class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
@@ -53,33 +68,41 @@
                 increase your lead generation.
             </p>
         </article>
+        <!-- social media marketing section end -->
     </section>
     <section class="benefits">
+        <!-- lead generation section start -->
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
             </p>
         </article>
+        <!-- lead generation section end -->
+        <!-- brand awareness section start -->
         <article class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
             </p>
         </article>
+        <!-- brand awareness section end -->
+        <!-- cost management section start-->
         <article class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
             </p>
         </article>
+        <!-- cost management section end -->
     </section>
+    <!-- footer -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
