update to the html, css and README file

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
     <!-- header/nav section start -->
-    <header class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+    <header>
+        <h1>Hori<span>seo</span>n</h1>
         <nav>
             <ul>
                 <li>
@@ -31,7 +31,7 @@
     <!-- hero section end -->
     <section class="content">
         <!-- search engine optimization section start -->
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg"
                 alt="image showing a computer, magnifing glass, cup of coffee pens and a note book that has drawings surrounding a cloud with SEO in the middle, on a nice wood table."
                 class="float-left" />
@@ -44,7 +44,7 @@
         </article>
         <!-- search engine optimization section end -->
         <!-- online reputation management section start -->
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg"
                 alt="person on a laptop looking at a reputation bar graph gradually going up in a positive way."
                 class="float-right" />
@@ -57,7 +57,7 @@
         </article>
         <!-- online reputation management section end -->
         <!-- social media marketing section start -->
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg"
                 alt="people sitting on both sides of a large table with computers and tablets with icons laying on a wooden table showing tweet, media, like, share and other technology reltated icons."
                 class="float-left" />
@@ -70,7 +70,7 @@
         </article>
         <!-- social media marketing section end -->
     </section>
-    <section class="benefits">
+    <aside>
         <!-- lead generation section start -->
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -101,10 +101,10 @@
             </p>
         </article>
         <!-- cost management section end -->
-    </section>
+    </aside>
     <!-- footer -->
-    <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+    <footer>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
