--- a/index.html
+++ b/index.html
@@ -27,49 +27,54 @@
     </header>
     <!-- header/nav section end -->
     <!-- hero section start -->
-    <div class="hero"></div>
-    <!-- hero section end -->
-    <section class="content">
-        <!-- search engine optimization section start -->
-        <article id="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg"
-                alt="image showing a computer, magnifing glass, cup of coffee pens and a note book that has drawings surrounding a cloud with SEO in the middle, on a nice wood table."
-                class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they
-                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
-                your visibility and find the right customers for your business.
-            </p>
-        </article>
-        <!-- search engine optimization section end -->
-        <!-- online reputation management section start -->
-        <article id="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg"
-                alt="person on a laptop looking at a reputation bar graph gradually going up in a positive way."
-                class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an
-                internet connection to say whatever they want about your business. Online Reputation Management gives
-                you the control over what potential customers see when they search for your business.
-            </p>
-        </article>
-        <!-- online reputation management section end -->
-        <!-- social media marketing section start -->
-        <article id="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg"
-                alt="people sitting on both sides of a large table with computers and tablets with icons laying on a wooden table showing tweet, media, like, share and other technology reltated icons."
-                class="float-left" />
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you
-                determine which platforms are suited to your brand, using analytics to find the right markets and
-                increase your lead generation.
-            </p>
-        </article>
-        <!-- social media marketing section end -->
-    </section>
+    <main>
+        <figure class="hero"></figure>
+        <!-- hero section end -->
+
+        <section class="content">
+            <!-- search engine optimization section start -->
+            <article id="search-engine-optimization">
+                <img src="./assets/images/search-engine-optimization.jpg"
+                    alt="image showing a computer, magnifing glass, cup of coffee pens and a note book that has drawings surrounding a cloud with SEO in the middle, on a nice wood table."
+                    class="float-left" />
+                <h2>Search Engine Optimization</h2>
+                <p>
+                    The dominance of mobile internet use means that users are searching for the right business as they
+                    travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                    your visibility and find the right customers for your business.
+                </p>
+            </article>
+            <!-- search engine optimization section end -->
+            <!-- online reputation management section start -->
+            <article id="online-reputation-management">
+                <img src="./assets/images/online-reputation-management.jpg"
+                    alt="person on a laptop looking at a reputation bar graph gradually going up in a positive way."
+                    class="float-right" />
+                <h2>Online Reputation Management</h2>
+                <p>
+                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an
+                    internet connection to say whatever they want about your business. Online Reputation Management
+                    gives
+                    you the control over what potential customers see when they search for your business.
+                </p>
+            </article>
+            <!-- online reputation management section end -->
+            <!-- social media marketing section start -->
+            <article id="social-media-marketing">
+                <img src="./assets/images/social-media-marketing.jpg"
+                    alt="people sitting on both sides of a large table with computers and tablets with icons laying on a wooden table showing tweet, media, like, share and other technology reltated icons."
+                    class="float-left" />
+                <h2>Social Media Marketing</h2>
+                <p>
+                    Social media continues to have a sizable influence on buying habits. Social media marketing helps
+                    you
+                    determine which platforms are suited to your brand, using analytics to find the right markets and
+                    increase your lead generation.
+                </p>
+            </article>
+            <!-- social media marketing section end -->
+        </section>
+    </main>
     <aside>
         <!-- lead generation section start -->
         <article class="benefit-lead">
